Agregado Prior y Pond

--- a/charter.tex
+++ b/charter.tex
@@ -242,31 +242,34 @@ Para el desarrollo del presente proyecto se suponen los siguientes:
 
 \begin{consigna} 
 \begin{table}
-\begin{tabularx}{\linewidth}{@{}|l|X|X|l|@{}}
+\begin{tabularx}{\linewidth}{@{}|l|X|X|l|l|@{}}
 \hline
 \rowcolor[HTML]{C0C0C0} 
-ID  & Hist. de Usuario & Crit. Aceptación & Tamaño 	\\ \hline
+ID  & Hist. de Usuario & Crit. Aceptación & Prior. & Pond. \\ \hline
 HU1 & COMO Jefe de Operaciones 
 QUIERO Visualizar Estado de las estaciones 
-PARA Detectar anomalias      & 	 & 5    	\\ \hline
+PARA Detectar anomalias      & 	 & 5   & 5 	\\ \hline
 HU2 & COMO Jefe de Operaciones 
 QUIERO Recibir Alertas por SMS/EMail 
-PARA Enviar un Ing. de Campo/FFSS de ser preciso   & 	& 8      	\\ \hline
+PARA Enviar un Ing. de Campo/FFSS de ser preciso   & 	& 8     & 5 	\\ \hline
 HU3 & COMO Gerente de Operaciones 
 QUIERO Visualizar fotos de avances de Obra 
-PARA Validar pagos de avance de Obra  & 	&  8     	\\ \hline
+PARA Validar pagos de avance de Obra  & 	&  8  & 5   	\\ \hline
 HU4 & COMO CEO 
 QUIERO Ver el estado general de las estaciones  
-PARA Poder informar a inversores       & &  5	\\ \hline
+PARA Poder informar a inversores       & &  5 & 5	\\ \hline
 HU5 & COMO COO 
 QUIERO Ver listado de ingresos a las estaciones 
-PARA Controlar actividades de Ing. de Campo &           	&   8    	\\ \hline
+PARA Controlar actividades de Ing. de Campo &           	&   8  & 5  	\\ \hline
 HU6 & COMO Jefe de Operaciones 
 QUIERO Agregar Estaciones al sistema 
-PARA Monitoreo de eventos  &  	& 8\\ \hline
+PARA Monitoreo de eventos  &  	& 8  & 5 \\ \hline
 HU7 & COMO Jefe de Operaciones 
 QUIERO Poder suspender envio de alertas 
-PARA Permitir ventana de Mantenimiento  &   &  5	\\ \hline
+PARA Permitir ventana de Mantenimiento  &   &  5 &  5	\\ \hline
+HU7 & COMO Jefe de Operaciones 
+QUIERO Poder crear usuarios en el sistema 
+PARA Permitir acceso a información  &   &  5 &  5	\\ \hline
 
 \end{tabularx}
 \end{table}
