--- a/charter.tex
+++ b/charter.tex
@@ -254,7 +254,7 @@ QUIERO Recibir Alertas por SMS/EMail
 PARA Enviar un Ing. de Campo/FFSS de ser preciso   & 	& 2     & 5 	\\ \hline
 HU3 & COMO Gerente de Operaciones 
 QUIERO Visualizar fotos de avances de Obra 
-PARA Validar pagos de avance de Obra  & 	&  4  & 5   	\\ \hline
+PARA Validar pagos de avance de Obra  & 	&  4  & 8   	\\ \hline
 HU4 & COMO CEO 
 QUIERO Ver el estado general de las estaciones  
 PARA Poder informar a inversores       & &  2 & 5	\\ \hline
@@ -267,12 +267,16 @@ PARA Monitoreo de eventos  &  	& 1  & 3 \\ \hline
 HU7 & COMO Jefe de Operaciones 
 QUIERO Poder suspender envio de alertas 
 PARA Permitir ventana de Mantenimiento  &   &  1 &  3	\\ \hline
-HU7 & COMO Jefe de Operaciones 
+HU8 & COMO Jefe de Operaciones 
 QUIERO Poder crear usuarios en el sistema 
 PARA Permitir acceso a información  &   &  3 &  3	\\ \hline
 
 \end{tabularx}
 \end{table}
+
+Criterio Prioridad: de 1 a 5, siendo 1 mas prioritario.   
+Criterio Complejidad: de 3 a 13, siendo 3 menos complejo. 
+
 
 \end{consigna}
 
